# KD4

./: .gitignore  AGENTS.md  SOURCEMAP.md  codex-changes.diff  defs.bzl  justfile  kd2_vs_0_143_diff_inventory.tsv  kd2_vs_0_143_full_file_inventory.txt  kd2_vs_0_143_port_audit.txt  kd2_vs_current_kd4_extensive_findings.txt  kd4_features.toml  kd4_phase1_completion_report.txt  kd4_phase2_completion_report.txt  package.json  pre-push-status.txt  uncommitted-diff.txt
.codex/: .gitignore  AGENTS.md  README.md  config.toml  tmp-hook.ps1
.codex/agents/: kd4_explorer.toml  kd4_integrator.toml  kd4_reviewer.toml  kd4_verifier.toml  kd4_worker.toml
.codex/environments/: README.md  setup.py
.codex/harness/: README.md  context-modes.md  workflow.md
.codex/harness/templates/: EVAL.md  HANDOFF.md  HARNESS_AUDIT.md  HARNESS_CHECKLIST.md  IMPLEMENT.md  ORCHESTRATOR.md  PLAN.md  QA_CHECKLIST.md
.codex/skills/implementation-regression-repair/: SKILL.md
.codex/skills/kd4-crosscheck-and-finish/: SKILL.md
.codex/skills/kd4-harness/: SKILL.md
.codex/skills/no-overlapping/: SKILL.md
.github/: blob-size-allowlist.txt
.github/actions/run-argument-comment-lint/: action.yml
.github/actions/setup-ci/: action.yml
.github/actions/setup-rusty-v8/: action.yml
.github/scripts/: check_ci_results.py  test_check_ci_results.py  test_verify_ci_decision.py  verify_cargo_workspace_manifests.py  verify_ci_decision.py
.github/workflows/: README.md  blob-size-policy.yml  blocking-ci.yml  cargo-deny.yml  codespell.yml  repo-checks.yml  rust-ci-full.yml  rust-ci.yml  rust-release.yml  sdk.yml
codex-cli/: README.npm.md
codex-cli/scripts/: build_npm_package.py
codex-rs/: AGENTS.md  BUILD.bazel  Cargo.toml  build_info.rs  default.nix  deny.toml
codex-rs/.cargo/: audit.toml  config.toml
codex-rs/.config/: nextest.toml
codex-rs/agent-graph-store/: Cargo.toml
codex-rs/agent-graph-store/src/: error.rs  local.rs  store.rs
codex-rs/agent-task-store/: Cargo.toml
codex-rs/agent-task-store/migrations/: 0001_agent_task_store.sql  0002_reliability.sql  0003_repository_bindings.sql  0004_gate_history_and_recovery.sql
codex-rs/agent-task-store/src/: error.rs  id.rs  lib.rs  local.rs  model.rs  scope.rs  store.rs  tests.rs
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  events.rs  facts.rs  lib.rs  reducer.rs
codex-rs/ansi-escape/: Cargo.toml
codex-rs/ansi-escape/src/: lib.rs
codex-rs/app-server/: BUILD.bazel  Cargo.toml  build.rs
codex-rs/app-server-client/: README.md
codex-rs/app-server-client/src/: lib.rs  remote.rs
codex-rs/app-server-protocol/src/: event_delivery.rs  lib.rs  schema_fixtures.rs
codex-rs/app-server-protocol/tests/: schema_fixtures.rs
codex-rs/app-server-test-client/: README.md
codex-rs/arg0/src/: lib.rs
codex-rs/cli/: BUILD.bazel  Cargo.toml  build.rs
codex-rs/codex-client/: README.md
codex-rs/core/: AGENTS.md  Cargo.toml  README.md  config.schema.json
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-skills/: Cargo.toml
codex-rs/external-agent-sessions/: Cargo.toml
codex-rs/file-search/: Cargo.toml
codex-rs/file-search/src/: lib.rs  source_routes.rs  source_routes_tests.rs  source_search.rs  source_search_main.rs  source_search_tests.rs
codex-rs/file-system/: Cargo.toml
codex-rs/file-system/src/: confined_file.rs  lib.rs
codex-rs/models-manager/: models.json  prompt.md
codex-rs/prompts/: AGENTS.md
codex-rs/protocol/: AGENTS.md
codex-rs/shell-command/: AGENTS.md  Cargo.toml
codex-rs/thread-manager-sample/: README.md
codex-rs/tools/: Cargo.toml
codex-rs/tui/: Cargo.toml  prompt_for_ideas_command.md  prompt_for_init_command.md
codex-rs/verify-local/: Cargo.toml
codex-rs/verify-local/src/: cargo_cache.rs  cargo_cache_tests.rs  ci.rs  ci_tests.rs  context.rs  context_tests.rs  finalize.rs  finalize_tests.rs  json.rs  json_tests.rs  lib.rs  main.rs  model.rs  planner.rs  runner.rs  runner_tests.rs  secure_result.rs  secure_result_tests.rs  snapshot.rs  snapshot_tests.rs
codex-rs/verify-local/tests/: cli.rs
docs/: install.md
scripts/: AGENTS.md  README.md  app_server_schema_runtime_check.py  asciicheck.py  cargo-lane-trash-cleanup.ps1  cargo-lane.ps1  check-module-bazel-lock.sh  check_blob_size.py  check_kd4_features.py  common-rust-env.ps1  config_schema_check.py  debug-codex.sh  dev_env_doctor.py  format.py  git_doctor.py  invoke-rust-perf-env.ps1  just-shell.py  kd4_perf_snapshot.py  kd4_sync_audit.py  list-bazel-clippy-targets.sh  mock_responses_websocket_server.py  publish-local-codex-wsl.sh  publish-local-codex.apply.ps1  publish-local-codex.build.ps1  publish-local-codex.desktop.ps1  publish-local-codex.hashing.ps1  publish-local-codex.proof.ps1  publish-local-codex.ps1  publish_local_codex_test_support.py  pyproject.toml  readme_toc.py  reasoning_quality_eval.py  root_maintenance.py  run-powershell-script.ps1  run_tui_with_exec_server.sh  rust_build_status.py  rust_build_status_support.py  rust_packages.py  sccache-perf.ps1  stage_npm_archives.py  (+35 more)
scripts/codex_package/: AGENTS.md  README.md  archive.py  cargo.py  cli.py  codex-zsh  dotslash.py  layout.py  ripgrep.py  targets.py  test_archive.py  test_cargo.py  test_cli.py  test_dotslash.py  test_layout.py  test_ripgrep.py  test_targets.py  test_v8.py  test_version.py  test_zsh.py  v8.py  version.py  zsh.py
scripts/install/: AGENTS.md  README.md  build_install_sh.py  install.ps1  install.sh  install_release.sh  test_install_sh.py
tools/argument-comment-lint/: README.md  test_wrapper_common.py
(+737 files in other folders)
