[package]
name = "codex-agent-task-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_agent_task_store"
path = "src/lib.rs"
doctest = false

[dependencies]
chrono = { workspace = true, features = ["serde"] }
codex-state = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
