[package]
name = "codex-file-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-file-search"
path = "src/main.rs"

[[bin]]
name = "codex-source-search"
path = "src/source_search_main.rs"

[lib]
name = "codex_file_search"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
ignore = { workspace = true }
nucleo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
unicode-casefold = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
