[package]
edition.workspace = true
license.workspace = true
name = "codex-verify-local"
version.workspace = true

[lib]
name = "codex_verify_local"
path = "src/lib.rs"

[[bin]]
name = "codex-verify-local"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indexmap = { workspace = true, features = ["serde"] }
globset = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
]
version = "0.52"

[dev-dependencies]
pretty_assertions = { workspace = true }
